--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 </ol>
 </li>
 </ol>
+<h2>
+<a name="example" class="anchor" href="example.html">Example</a>
+</h2>
       </section>
     </div>
 
