--- a/example.html
+++ b/example.html
@@ -9,7 +9,7 @@
             background-color: lightgrey;
         }
     </style>
-    <script src="/javascripts/loader.js"></script>
+    <script src="/Loader/javascripts/loader.js"></script>
 </head>
 
 <body>
